--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <meta name="description" content="" />
     <title>Print Modular Home</title>
 
+    <!--Font Awesome JS-->
+    <script src="https://kit.fontawesome.com/4b926c6456.js" crossorigin="anonymous"></script>
+
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script type="module" src="./index.js"></script>
+    <script src="./index.js"></script>
     <link href="./CSS/style.css" rel="stylesheet" />
 </head>
 
@@ -20,17 +23,19 @@
     <div id="home"></div>
     <div id="about"></div>
     <div id="projects"></div>
-    <div id="products"></div>
+    <div id="products" class="mb-5"></div>
     <div id="contact"></div>
     <div class="main-footer widgets-dark typo-light" id="footer"></div>
 
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/home.js"></script>
     <script src="./javascript/about.js"></script>
-    <script src="./javascript/projects.js"></script>
+    <script type="module" src="./javascript/projects.js"></script>
+
     <script src="./javascript/products.js"></script>
     <script src="./javascript/contact.js"></script>
     <script src="./javascript/footer.js"></script>
+
 
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
