--- a/index.html
+++ b/index.html
@@ -14,27 +14,23 @@
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="./index.js"></script>
     <link href="./CSS/style.css" rel="stylesheet" />
 </head>
 
 <body>
     <div id="nav"></div>
-    <div id="home"></div>
-    <div id="about"></div>
-    <div id="projects"></div>
-    <div id="products" class="mb-5"></div>
-    <div id="contact"></div>
+    <div id="header"></div>
+    <div id="content"></div>
     <div class="main-footer widgets-dark typo-light" id="footer"></div>
 
-    <script src="./javascript/navbar.js"></script>
-    <script src="./javascript/home.js"></script>
-    <script src="./javascript/about.js"></script>
-    <script type="module" src="./javascript/projects.js"></script>
-
-    <script src="./javascript/products.js"></script>
-    <script src="./javascript/contact.js"></script>
-    <script src="./javascript/footer.js"></script>
+    <script type="module" src="./javascript/Navbar.js"></script>
+    <script type="module" src="./javascript/Header.js"></script>
+    <script type="module" src="./javascript/Home.js"></script>
+    <script type="module" src="./javascript/About.js"></script>
+    <script type="module" src="./javascript/Projects.js"></script>
+    <script type="module" src="./javascript/Products.js"></script>
+    <script type="module" src="./javascript/Contact.js"></script>
+    <script type="module" src="./javascript/Footer.js"></script>
 
 
     <!--Bootstrap JS-->
